# atlas-design-pattern-maerz-2025

./: README.md
Konto_Iterator/: CMakeLists.txt  main.cpp  output.txt
Konto_Iterator/composite/: AddSaldoVisitor.h  IteratorVisitor.cpp  IteratorVisitor.h  Konto.h  Kontogruppe.h  NodeVisitor.cpp  NodeVisitor.h  PrintVisitor.h  abstract_node.h
Tag1_02Singleton/: CMakeLists.txt  Singleton.h
Tag1_03FlyWeight/: AttributedCharacter.h  CMakeLists.txt  main.cpp
Tag1_04Visitor/: CMakeLists.txt  main.cpp
Tag1_04Visitor/firma/: Firma.h
Tag1_04Visitor/mitarbeiter/: AbstractMitarbeiter.h  GehaltsEmpfaenger.h  LohnEmpfaenger.h
Tag1_05State/: CMakeLists.txt  FrontController.cpp  FrontController.h  main.cpp
Tag1_05State/state/: AbstractState.h  State.h  StateA.h  StateB.h
Tag1_06TrafficLight/: CMakeLists.txt  main.cpp
Tag1_06TrafficLight/trafficlight/: TrafficLight.cpp  TrafficLight.h
Tag2_01Observer/: CMakeLists.txt  main.cpp
Tag2_01Observer/propertchange/: PropertyChangedEvent.h
Tag2_01Observer/tiere/: Schwein.h
Tag2_02Command/: CMakeLists.txt  main.cpp
Tag2_02Command/command/: AbstractCommand.h  (+8 more)
Tag2_05Template/: CMakeLists.txt  main.cpp
Tag3_01Iterator/: CMakeLists.txt  main.cpp
Tag3_02Composite/: CMakeLists.txt  main.cpp
Tag3_03Bank/: CMakeLists.txt  main.cpp
Tag3_03Bank/composite/: Iterator.h  abstract_bank_node.h  konto.h  konto_gruppe.h
Tag3_03Bank/composite/visitor/: PrintVisitor.h  abstract_konto_visitor.h  konto_gruppen_visitor.h  konto_visitor.h
Tag3_03Memento/: CMakeLists.txt  main.cpp
untitled/: CMakeLists.txt  main.cpp
(+26 files in other folders)
